package com.rasp.utils.protobuf;

//package under which Autogenerated class is to be placed
option java_package = "com.rasp.fs";
option java_outer_classname = "SInputSplitProtos";
option java_generic_services = true;


/*
 *
 *  represents the input split to be sent across the network
 *
 */
message SInputSplit {
    // the id for the input split
    required int32 idx = 1;
    // the offset from where the input split begins
    required int64 offset = 2;
    // the length of the input split
    required int64 length = 3;
    // the location where the input split resides
    required string location = 4;
    // the inputFormatId of the inputFormat to which the input split belongs
    optional string inputFormatId = 5;
}

/*
 *
 *  represents the input chunk to be sent across the network
 *
 */
message SInputChunk {
    //chunk is the bytes to be sent across the network
    required bytes chunk =1;
}

/*
 *
 *  represents the response of the rpc call
 *
 */
message TransferResponse {
    // rperesents the response status
    // currently this field is not being used, however it can be used in the future
    optional string status = 1;
}

/*
 * represents a void message
 */
message Void {
}

/*
 * represents the data transfer rpc service
 *
 */
service DataTransferService {

    /*
     * sends the given SInputSplit and returns the TransferResponse
     */
    rpc sendInputSplit(SInputSplit) returns (TransferResponse);

    /*
     * sends the given SInputChunk and returns the TransferResponse
     */
    rpc sendChunk(SInputChunk) returns (TransferResponse);

    /*
     * closes the file descriptors which were opened to send data for the input split
     */
    rpc closeInputSplit(Void) returns (Void);
}